# cprimim

./: .gitignore  CMakeLists.txt  README.md
include/: color.h  cprimim.h  image.h
src/cli/: CMakeLists.txt  cli.c  flag_impl.c  stb_impl.c
src/processing/: CMakeLists.txt  bezier.c  image.c  line.c  point.c  processing.c  utils.c
src/processing/internal/: bezier.h  image_internal.h  line.h  point.h  triangle.h  utils.h
